# deepclient-extensionbase-cpp

./: CMakeLists.txt  CMakeLists.txt.old  Dockerfile  PyPhpBridge.cpp  PyPhpBridge.h  README.md  app.py  deep_client_interface.py  deep_client_php_wrapper.cpp  make_deep.py  test.php  test.py
deepclient/: __init__.py
